--- a/styles/book-shelf.css
+++ b/styles/book-shelf.css
@@ -65,3 +65,11 @@
   font-size: 1.25rem;
   color: #1f2937;
 }
+
+.related-authors-title {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: #1f2937;
+}
