--- a/styles/item-styles.css
+++ b/styles/item-styles.css
@@ -1,10 +1,8 @@
 /* item-container内部 */
 
-
-
 .info-list-container {
   height: 100%;
-  width: 20%;
+  width: 25%;
 
   padding-left: 15px;
   padding-right: 15px;
@@ -22,54 +20,58 @@
   background-color: rgb(253, 239, 199);
 }
 
-  .vis-container {
-      height:100%;
-      width: 50%;
-      background-color: #f0f0f0;
-      padding-left: 15px;
-      padding-right: 15px;
-      box-sizing: border-box;
-  }
-
-  svg {
-    height: 100%; /* 親要素に合わせる */
-    width: 100%; /* 必要なら幅も調整 */
+.vis-container {
+  height: 100%;
+  /* 93にした */
+  width: 45%;
+  /* 45にした */
+  background-color: #f0f0f0;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* margin-top: 3%; */
+  box-sizing: border-box;
 }
 
-  
+svg {
+  height: 100%; /* 親要素に合わせる */
+  width: 100%; /* 必要なら幅も調整 */
+}
+
+.book-container {
+  height: 100%;
+  width: 30%;
+
+  padding-left: 15px;
+  padding-right: 15px;
+  box-sizing: border-box;
+  background-color: rgb(253, 239, 199);
+  background-clip: content-box; /* 背景色をcontent部分のみに限定 */
+}
+
+/* レスポンシブ設定 */
+@media (max-width: 768px) {
+  /* メインコンテナを縦に並べる */
+  .main-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .vis-container,
   .book-container {
-    height: 100%;
-    width: 30%;
-  
-    padding-left: 15px;
-    padding-right: 15px;
-    box-sizing: border-box;
-    background-color: rgb(253, 239, 199);
-    background-clip: content-box; /* 背景色をcontent部分のみに限定 */
+    width: 100%;
+    height: 50%; /* 画面の高さに合わせて高さを調整 */
   }
-  
-  /* レスポンシブ設定 */
-  @media (max-width: 768px) {
-    /* メインコンテナを縦に並べる */
-    .main-container {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .vis-container, .book-container {
-      width: 100%;
-      height: 50%; /* 画面の高さに合わせて高さを調整 */
-    }
+}
+
+@media (max-width: 480px) {
+  /* セレクトボタンのテキストを小さくする */
+  h1 {
+    font-size: 1rem;
   }
-  
-  @media (max-width: 480px) {
-    /* セレクトボタンのテキストを小さくする */
-    h1 {
-      font-size: 1rem;
-    }
-  
-    /* ビジュアライゼーションエリアの高さを調整 */
-    .vis-container, .book-container {
-      height: 40%; /* より小さな画面で高さを調整 */
-    }
+
+  /* ビジュアライゼーションエリアの高さを調整 */
+  .vis-container,
+  .book-container {
+    height: 40%; /* より小さな画面で高さを調整 */
   }
+}
