--- a/styles/body-styles.css
+++ b/styles/body-styles.css
@@ -1,6 +1,6 @@
 body {
   height: 100%;
-
+  background: linear-gradient(to bottom, #7b7b79, #5a5a5a, #40403e) fixed;
   margin: 0;
   padding: 0;
 }
