--- a/styles/book-shelf.css
+++ b/styles/book-shelf.css
@@ -6,19 +6,38 @@
 
 .no-books-message {
   width: 100%;
-  color: #6b7280;
+  /* color: #6b7280; */
+  color: #f1f1f1;
+}
+
+.book-shelf-header {
+  padding: 0.5rem;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 /* 本棚のレイアウト */
 .book-shelf-container {
   padding: 0.5rem;
+  border: 1px solid #090909;
+  overflow-y: auto;
+  border-radius: 4px;
+  max-width: 100vh;
 }
 
-.book-shelf-grid {
+/* .book-shelf-grid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 1rem;
+} */
+
+.book-shelf-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+  width: 100%;
 }
 
 /* 本のカード関連 */
@@ -37,6 +56,7 @@
   height: 7rem;
   width: 5rem;
   margin-bottom: 0.25rem;
+  aspect-ratio: 2/3;
 }
 
 .book-image {
@@ -49,7 +69,8 @@
 .book-title {
   font-size: 0.75rem;
   text-align: center;
-  color: #1f2937;
+  /* color: #1f2937; */
+  color: #f1f1f1;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -57,13 +78,14 @@
 }
 
 .book-link:hover .book-title {
-  color: #2563eb;
+  color: #a452b5;
 }
 
 .selected-author-name {
   margin-bottom: 1rem;
   font-size: 1.25rem;
-  color: #1f2937;
+  /* color: #1f2937; */
+  color: #f1f1f1;
 }
 
 .related-authors-title {
@@ -71,5 +93,6 @@
   margin-bottom: 1rem;
   font-size: 1.25rem;
   font-weight: bold;
-  color: #1f2937;
+  /* color: #1f2937; */
+  color: #f1f1f1;
 }
