--- a/styles/font-styles.css
+++ b/styles/font-styles.css
@@ -1,5 +1,14 @@
 /* フォントサイズ */
 h1 {
-    font-size: 1.5rem;
-    margin: 0;
+  font-size: 1.5rem;
+  margin: 0;
+  color: #f1f1f1;
+}
+
+h2,
+p,
+div {
+  text-shadow: -1px -1px 0 #40403e, 0px -1px 0 #40403e, 1px -1px 0 #40403e,
+    -1px 0px 0 #40403e, 1px 0px 0 #40403e, -1px 1px 0 #40403e, 0px 1px 0 #40403e,
+    1px 1px 0 #40403e;
 }
