--- a/styles/item-styles.css
+++ b/styles/item-styles.css
@@ -31,6 +31,8 @@
   outline: 1px solid #090909;
   outline-offset: 2px;
   /* background-color: #7b7b79; */
+  overflow-y: auto;
+  border-radius: 4px;
   padding-left: 15px;
   padding-right: 15px;
   box-sizing: border-box;
@@ -44,7 +46,8 @@ svg {
 .book-container {
   height: 100%;
   width: 30%;
-  color: #f1f1f1;
+  /* color: #f1f1f1; */
+  color: #454545;
   padding-left: 15px;
   padding-right: 15px;
   box-sizing: border-box;
