--- a/styles/item-styles.css
+++ b/styles/item-styles.css
@@ -33,8 +33,8 @@
   /* background-color: #7b7b79; */
   overflow-y: auto;
   border-radius: 4px;
-  padding-left: 15px;
-  padding-right: 15px;
+  /* padding-left: 15px;
+  padding-right: 15px; */
   box-sizing: border-box;
 }
 
