--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -13,7 +13,7 @@
 .select-container {
   height: 10%;
   width: 100%;
-  color: #f1f1f1;
+  color: #454545;
   text-align: center;
   background-color: rgb(230, 213, 247);
 }
