コンフリクト修正

--- a/src/components/Information.css
+++ b/src/components/Information.css
@@ -1,8 +1,8 @@
 .information-container {
-  border: 1px solid #090909;
+  /* border: 1px solid #090909; */
   max-height: 40vh;
-  overflow-y: auto;
-  border-radius: 4px;
+  /* overflow-y: auto;
+  border-radius: 4px; */
   /* color: #f1f1f1; */
   color: #454545;
 }
