--- a/styles/book-shelf.css
+++ b/styles/book-shelf.css
@@ -4,10 +4,17 @@
   text-align: center;
 }
 
+.error-message {
+  margin: 10px;
+}
 .no-books-message {
   width: 100%;
   color: #454545;
   /* color: #f1f1f1; */
+}
+
+.no-selection-message {
+  text-align: center;
 }
 
 .book-shelf-header {
@@ -20,12 +27,16 @@
 /* 本棚のレイアウト */
 .book-shelf-container {
   padding: 0.5rem;
-  border: 1px solid #090909;
+  /* background-color: azure; */
+  /* border: 1px solid #090909; */
   overflow-y: auto;
   border-radius: 4px;
-  /* max-height: 100vh; */
-  max-width: 100vw; /* vhをvwに変更 */
-  max-height: 80vh;
+
+  /* height: 95%; */
+  margin-top: 7px;
+  /* max-width: 100vw; 
+  max-height: 80vh; */
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
 }
 
 /* .book-shelf-grid {
