--- a/styles/item-styles.css
+++ b/styles/item-styles.css
@@ -1,8 +1,7 @@
 /* item-container内部 */
 
 .info-list-container {
-  height: 100%;
-  width: 30%;
+  width: 25%;
   margin-top: 10px;
   padding-left: 15px;
   padding-right: 15px;
@@ -10,32 +9,28 @@
 
 .info-container {
   height: 40%;
-  width: 100%;
+  box-shadow: 0 0 10px #00000040;
   overflow-y: auto;
   border-radius: 4px;
-  /* background-color: #7b7b79; */
 }
 
 .list-container {
-  height: 60%;
-  width: 100%;
-  background-color: rgb(253, 239, 199);
+  height: 58%;
+  margin-top: 10px;
+  overflow-y: auto;
+  border-radius: 4px;
+  box-shadow: 0 0 10px #00000040;
 }
 
 .vis-container {
   height: 100%;
-  width: 40%;
-  /* padding: 2em; */
-  /* 二重枠線↓ */
+  width: 45%;
   margin-top: 10px;
   border: 1px solid #090909;
   outline: 1px solid #090909;
   outline-offset: 2px;
-  /* background-color: #7b7b79; */
   overflow-y: auto;
   border-radius: 4px;
-  /* padding-left: 15px;
-  padding-right: 15px; */
   box-sizing: border-box;
 }
 
@@ -45,18 +40,16 @@ svg {
 }
 
 .book-container {
-  height: 100%;
   width: 30%;
   margin-top: 10px;
-  /* color: #f1f1f1; */
+  box-shadow: 0 0 10px #00000040;
+  margin-left: 15px;
+  margin-right: 15px;
   color: #454545;
-  padding-left: 15px;
-  padding-right: 15px;
   box-sizing: border-box;
   overflow-y: auto;
   border-radius: 4px;
-  /* background-color: #7b7b79; */
-  background-clip: content-box; /* 背景色をcontent部分のみに限定 */
+  background-clip: content-box;
 }
 
 /* レスポンシブ設定 */
