--- a/styles/book-shelf.css
+++ b/styles/book-shelf.css
@@ -35,21 +35,14 @@
   margin-top: 7px;
   max-width: 100vw;
   max-height: 80vh;
-  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
 }
-
-/* .book-shelf-grid {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1rem;
-} */
 
 .book-shelf-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 0.5rem;
   width: 100%;
+  justify-items: center;
 }
 
 /* 本のカード関連 */
@@ -93,11 +86,8 @@
   color: #a452b5;
 }
 
-.selected-author-name {
-  margin-bottom: 1rem;
-  font-size: 1.25rem;
-  /* color: #1f2937; */
-  color: #454545;
+.author-name {
+  padding: 0rem 1rem;
 }
 
 .related-authors-title {
