--- a/styles/item-styles.css
+++ b/styles/item-styles.css
@@ -2,6 +2,7 @@
 
 .info-list-container {
   width: 25%;
+  height: 100%;
   margin-top: 10px;
   padding-left: 15px;
   padding-right: 15px;
@@ -42,6 +43,7 @@ svg {
 
 .book-container {
   width: 30%;
+  height: 100%;
   margin-top: 10px;
   box-shadow: 0 0 10px #00000040;
   margin-left: 15px;
