--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -3,23 +3,15 @@
   height: 100%;
   width: 100%;
 
-  padding-bottom: 1%;
+  /* padding-bottom: 1%; */
   box-sizing: border-box;
 
   /* 現状不要 */
   /* overflow: hidden; */
 }
 
-.select-container {
-  height: 10%;
-  width: 100%;
-  color: #454545;
-  text-align: center;
-  background-color: rgb(230, 213, 247);
-}
-
 .item-container {
-  height: 90%;
+  height: calc(100% - 20px);
   width: 100%;
 
   display: flex;
