--- a/src/components/SelectNode.css
+++ b/src/components/SelectNode.css
@@ -1,5 +1,6 @@
 .select-node-container {
   background-color: #1a1a1a;
+  position: absolute;
   border-radius: 0 0 4px 4px;
   padding: 0.75rem 1rem;
   display: flex;
@@ -8,6 +9,7 @@
   gap: 0.5rem;
   color: #f1f1f1;
   width: fit-content;
+  right: 0;
 }
 
 .select-node-label {
