色・フォントの変更

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -46,10 +46,12 @@
   
   .mb-2 {
     margin-bottom: 0.5rem;
+    color: #454545;
   }
   
   .mb-4 {
     margin-bottom: 1rem;
+    color: #454545;
   }
   
   .mt-4 {
