--- a/src/components/SelectNode.css
+++ b/src/components/SelectNode.css
@@ -4,21 +4,61 @@
   border-radius: 0 0 4px 4px;
   padding: 0.75rem 1rem;
   display: flex;
-  margin: 0 0 0 auto;
-  align-items: center;
-  gap: 0.5rem;
+  margin: 0 0 0 0px;
+  /* align-items: center; */
+  gap: 0rem;
   color: #f1f1f1;
+  /* min-width: 470px; */
   width: fit-content;
   right: 0;
+}
+
+.selected-node-info {
+  display: flex;
+  width: fit-content;
 }
 
 .select-node-label {
   margin: 0;
   font-size: 1rem;
   font-weight: normal;
+  align-items: center;
 }
 
 .select-node-name {
   color: #d0c1ff;
   font-weight: 500;
+  /* justify-content: center; */
+  /* padding-right: 20px; */
+  align-items: center;
+  margin: auto;
+  width: 99.27px;
+  text-align: center;
+}
+
+.legend-container {
+  display: flex;
+  margin-right: 15px;
+  align-items: center;
+}
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  /* margin-bottom: 5px; */
+}
+
+.legend-color {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin-right: 0px;
+  border: 1px solid #1a1a1a;
+}
+
+.legend-label {
+  font-size: 14px;
+  margin-right: 5px;
+  align-items: center;
+  
 }
