forceやら文言やらの修正

--- a/src/components/Information.css
+++ b/src/components/Information.css
@@ -16,6 +16,7 @@
 }
 
 .information-header {
+  color: #454545;
   padding: 0.5rem;
   /* border-bottom: 1px solid #090909; */
   text-align: center;
