--- a/src/components/List.css
+++ b/src/components/List.css
@@ -9,16 +9,20 @@
     text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
-  }
+  } 
   .keyword-item {
-    margin-bottom: 0.3rem;
+    display: inline-block; /* インライン配置 */
+    padding: 4px 10px;
+    margin: 4px;
+    border: 1px solid #7373734d; /* 黒枠 */
+    background-color: #f5f5f5; /* 背景色 */
+    border-radius: 15px; /* 角を少し丸める */
+    font-size: 14px;
+    cursor: default;
+    font-family: "刻明朝";
+    color: #454545;
   }
   
-  .keyword-link {
-    color: #007acc;
-    cursor: pointer;
-    text-decoration: underline;
-  }
   
   /* relation一覧のスタイル */
   .relation-item {
@@ -60,3 +64,41 @@
   
   /* 見出しだけ少し大きめに、など */
   /* さらにフォントを合わせたい場合は font-family 指定 */
+  .info-icon {
+    position: relative;
+    display: inline-block;
+    margin-left: 4px;
+    margin-bottom: 7px;
+    cursor: pointer;
+    color: #666;
+    font-size: 8px; /* アイコンのサイズを小さく */
+  }
+  
+  .info-icon:hover {
+    color: #333;
+  }
+  
+  .tooltip {
+    visibility: hidden;
+    width: 200px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 4px 6px;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 10;
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.2s;
+    font-size: 10px;
+    line-height: 1.3;
+  }
+  
+  .info-icon:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+  }
+  
