最後の仕上げ

--- a/styles/body-styles.css
+++ b/styles/body-styles.css
@@ -34,7 +34,8 @@ header {
   /* 上下10px 左右0px */
   /* padding: 10px 0px; */
 
-  background-color: #d1d2c8;
+  /* background-color: #d1d2c8; */
+  background-color: #d9c1ff;
   /* text-align: center; */
   display: flex;
   align-items: center;
